Implement Delete Measurement method
